# shard

./: .env.example  CITATION.cff  LICENSE  MANIFEST.in  README.md  comparaison.md  era-shacl-shacl.ttl  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt  run_demo.py
.github/workflows/: ci.yml
demo/: app.js  common.js  guide.html  guide.js  index.html  ontology.ttl  rule.html  rule.js  styles.css  test-ontology.ttl
demo/templates/: business_rules_template.html  business_rules_template.md
docs/: api.md  architecture.md  deployment.md
examples/api/: generate_batch.py  generate_guide.py  generate_rule.py
examples/asset-maintenance/: business-rules.html  business-rules.md  generation-context.md  ontology.ttl
examples/era-rinf/: business-rules.html  business-rules.md
experiments/target_resolution/: evaluate.py
frontend/: batch.html  guide.html  index.html  rule.html
frontend/css/: base.css  editor.css  layout.css  logs.css  support-panels.css  theme.css  workspace.css
frontend/examples/: README.md  epo-5.2.0-shard-demo-subset.ttl  epo-batch-session.json  epo-rule-session.json  manifest.json
frontend/js/: batch.js  core.js  export.js  guide.js  logs.js  models.js  ontology.js  rule.js  shapes.js  turtle.js
frontend/templates/: business_rules_template.html  business_rules_template.md  data_constraints_template.html  data_constraints_template.md
profiles/era/: era-shacl-shacl.ttl
scripts/: smoke_huggingface.py
services/: build_shacl_shapes.py  find_relevant_terms.py  generate_from_guide.py  parse_ontology.py  rule_target_resolver.py
src/shard/: __init__.py  cli.py  prompting.py
src/shard/api/: __init__.py  compat.py  contract.py  errors.py  http.py  jobs.py  models.py  openapi.py  operational.py  operations.py  provenance.py  redoc_ui.py  router.py  sse.py  swagger_ui.py
src/shard/application/: __init__.py  baseline_generation.py  batch_generation.py  generation_support.py  guide_generation.py  model_check.py  ontology_catalog.py  shape_consolidation.py  shape_export.py  shape_generation.py  shape_merge.py  shape_validation.py  target_resolution.py  term_ranking.py  workflows.py
src/shard/baselines/: __init__.py  evidence.py  graph.py  io.py  merge.py  normalization.py
src/shard/deployment/: __init__.py  operational.py  policy.py
src/shard/domain/: __init__.py  business_rules.py  limits.py  namespaces.py  ontology.py
src/shard/inference/: __init__.py  context.py  databricks.py  huggingface.py  local_store.py
src/shard/integrations/: __init__.py  astrea.py
src/shard/observability/: __init__.py  request_logging.py
src/shard/resources/: __init__.py
src/shard/resources/prompts/: rule_general.json
test/: asset_maintenance_shape_validation_profile.ttl  business_rules_example.html  business_rules_example.md  era_rinf_business_rules_example.html  era_rinf_business_rules_example.md  era_rinf_subset_ontology.ttl  evaluate_rule_target_resolver.py  smoke_huggingface_local.py  test_baseline_shapes.py  test_deployment_policy.py  test_ns_utils.py  test_shape_prefix_flow.py
tests/: __init__.py  api_url_smoke.py  test_astrea_normalization.py
tests/integration/: __init__.py  test_frontend_assets.py  test_preloaded_examples.py  test_shape_prefix_flow.py  test_unified_api.py
tests/unit/: __init__.py  test_api_contract.py  test_api_http.py  test_api_jobs.py  test_api_models.py  test_astrea_integration.py  test_baseline_shapes.py  test_cli_environment.py  test_data_constraint_templates.py  test_deployment_policy.py  test_generation_support.py  test_local_model_operations.py  test_local_model_store.py  test_namespaces.py  test_openapi.py  test_openapi_strict.py  test_operational_safeguards.py  test_package_architecture.py  test_rule_context.py  test_sse_contract.py  test_swagger_ui.py  test_workflows.py
text2shacl_core/: Logger.py  baseline_shapes.py  business_rules.py  deployment_policy.py  model_loader.py  model_loader_databricks.py  model_loader_hf.py  multiagent.py  multiagent_stream.py  ns_utils.py  ontology_io.py  preprocess_html.py  preprocess_html_from_pdf.py  prompts.py  rag.py  rag_inmemory.py  runtime_config.py  service_http.py  utils.py
text2shacl_core/prompts/: multiagent.json  rag.json  rule_general.json
