[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shard-shacl"
version = "0.1.0"
description = "An Interactive Workbench for Ontology-Grounded SHACL Authoring from Data Constraints"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "CiTIUS, Universidade de Santiago de Compostela" },
]
keywords = ["SHACL", "RDF", "OWL", "data constraints", "knowledge graphs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "langchain-core>=0.2",
  "openai>=1.30",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyshacl>=0.26",
  "rdflib>=7.0",
]

[project.optional-dependencies]
local = [
  "accelerate",
  "huggingface-hub",
  "sentence-transformers",
  "torch",
  "transformers",
]

[project.urls]
Repository = "https://github.com/citiususc/shard"
Documentation = "https://github.com/citiususc/shard/tree/main/docs"
Issues = "https://github.com/citiususc/shard/issues"

[project.scripts]
shard = "shard.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shard = [
  "resources/prompts/*.json",
  "resources/validation/*.ttl",
]

[tool.setuptools.data-files]
"share/doc/shard" = [
  ".env.example",
  "README.md",
  "CITATION.cff",
  "docs/*.md",
]
"share/shard/frontend" = [
  "frontend/*.html",
]
"share/shard/frontend/css" = [
  "frontend/css/*.css",
]
"share/shard/frontend/js" = [
  "frontend/js/*.js",
]
"share/shard/frontend/templates" = [
  "frontend/templates/*.html",
  "frontend/templates/*.md",
]
"share/shard/frontend/examples" = [
  "frontend/examples/*.json",
  "frontend/examples/*.md",
]
"share/shard/frontend/assets/images" = [
  "frontend/assets/images/*.png",
]
